# karaoke

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  README.md  SHITLIST.md  TODO.md  context.md  package-lock.json  package.json  research.md  svelte.config.js  worktree.sh
.gitignore.d/: e2e
backend/: .gitignore  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  db.py  db_recovery.py  jellyfin_client.py  lrclib.py  main.py  processing.py  queue.py  schema.py  sessions.py  stems.py  track_service.py  tracking.py  tracks.py  websocket_manager.py  youtube.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  jellyfin.py  queue.py  sessions.py  tracks.py  upload.py
backend/app/utils/: __init__.py  acoustid.py  demucs.py  downloader.py  lrclib.py
backend/app/websocket/: manager.py  schema.py
backend/tests/: README.md  conftest.py  pytest.ini  test_database.py  test_http.py  test_lrclib.py  test_queue_order.py  test_sessions.py  test_stems.py  test_track_playback.py  test_tracks.py  test_websocket.py  test_youtube.py
backend/tests/unit/: test_acoustid.py  test_api_routes.py  test_config.py  test_db.py  test_demucs.py  test_downloader.py  test_jellyfin_client.py  test_lrclib.py  test_playback.py  test_processing.py  test_queue.py  test_schema.py  test_sessions.py  test_track_service.py  test_tracking.py  test_websocket.py
e2e/: global-setup.ts  global-teardown.ts  package-lock.json  package.json  playwright.config.ts  playwright.screenshots.config.ts  playwright.videos.config.ts  smoke.spec.ts  tsconfig.json
(+77 files in other folders)
