[project]
name = "karaoke-backend"
version = "0.1.0"
description = "Karaoke backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "aiosqlite>=0.20.0",
    "websockets>=14.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.17",
    "aiofiles>=24.1.0",
    "jinja2>=3.1.0",
]

[dependency-groups]
dev = [
    "aiohttp>=3.14.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]
